--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Mech Robot AI Image Maker</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>It is scheduled to open soon. See you on December 25th!</h1>
 </body>
 
 </html>
