--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		
 		<link href="./app/immutable/assets/0.Ch4i8XRC.css" rel="stylesheet">
 		<link href="./app/immutable/assets/2.DaY28Rxs.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.Dih8PBTx.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DySWZpNP.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.O0nuA4O2.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DSgDKyqJ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.B_H9mSWP.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.B2Goq38V.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.FmKLGhgk.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DiHSNta2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/store.DCx8RY4p.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.DSj33onH.js">
@@ -33,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_1cd0ahl = {
+					__sveltekit_13kovsk = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -42,8 +42,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.Dih8PBTx.js"),
-						import("./app/immutable/entry/app.B2Goq38V.js")
+						import("./app/immutable/entry/start.O0nuA4O2.js"),
+						import("./app/immutable/entry/app.FmKLGhgk.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
